fixed darkmode and removed large icon on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ button:focus-visible {
 }
 
 .title {
-  @apply font-bold text-2xl lg:text-4xl xl:text-4xl text-left flex-grow text-black;
+  @apply font-bold text-2xl lg:text-4xl xl:text-4xl text-left flex-grow text-black dark:text-white;
 }
 
 .service-card {
